# datalys2-tasks

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  datalys2_tasks.db  demo_task.py  pyproject.toml
src/datalys2_tasks/: cli.py
src/datalys2_tasks/client/: __init__.py  decorator.py
src/datalys2_tasks/core/: config.py  models.py
src/datalys2_tasks/scheduler/: __init__.py  autorun.py  windows.py
src/datalys2_tasks/server/: app.py  database.py  scheduler_router.py  startup.py
src/datalys2_tasks/server/static/: index.html
