[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dl2-tasks"
version = "0.1.0"
description = "A lightweight local task orchestration system built on windows task scheduler"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "sqlalchemy>=2.0.0"
]

[project.scripts]
datalys2-server = "datalys2_tasks.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
